--- a/backend1-mysqlConnection/package.json
+++ b/backend1-mysqlConnection/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "request": "^2.88.2"
   }
 }
